--- a/.babelrc
+++ b/.babelrc
@@ -1,16 +1,12 @@
 {
-  "presets": [
-    ["env", { "targets": { "node": "current" } }]
-  ],
+  "presets": ["@babel/env"],
   "env": {
     "test": {
-      "presets": [
-        ["env", { "targets": { "node": "current" } }]
-      ]
+      "presets": ["@babel/env"]
     }
   },
   "plugins": [
-    ["transform-react-jsx",  { "pragma": "h", "pragmaFrag": "''" }],
-    ["transform-object-rest-spread", { "useBuiltIns": true }]
+    ["@babel/plugin-transform-react-jsx",  { "pragma": "h", "pragmaFrag": "''" }],
+    ["@babel/plugin-proposal-object-rest-spread", { "useBuiltIns": true }]
   ]
 }
