--- a/package.json
+++ b/package.json
@@ -1,49 +1,45 @@
 {
   "name": "hyperapp-tetris",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --config webpack/devserver.js",
-    "build": "webpack --config webpack/build.js",
+    "prepublishOnly": "npm run build",
+    "dev": "webpack-dev-server --config example/webpack/devserver.js",
+    "build": "microbundle build -i src/index.js --compress false",
     "test": "jest test --watch"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/goldenthumb/hyperapp-tetris.git"
   },
-  "author": "",
+  "author": "goldenthumb",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/goldenthumb/hyperapp-tetris/issues"
   },
   "devDependencies": {
-    "autoprefixer": "^8.0.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^9.0.0",
-    "babel-jest": "^23.4.2",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-env": "^1.7.0",
-    "css-loader": "^0.28.9",
-    "eslint": "^5.4.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-react": "^7.11.1",
-    "jest": "^23.5.0",
-    "node-sass": "^4.9.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.1",
+    "@babel/plugin-transform-react-jsx": "^7.3.0",
+    "@babel/preset-env": "^7.3.1",
+    "autoprefixer": "^9.4.6",
+    "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.0",
+    "hyperapp": "^1.2.9",
+    "jest": "^23.6.0",
+    "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
-    "regenerator-runtime": "^0.12.1",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.20.1",
-    "webpack": "^4.17.1",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5"
+    "regenerator-runtime": "^0.13.1",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
     "event-emitter": "^0.3.5",
-    "hyperapp": "^1.2.8"
+    "lodash": "^4.17.11"
   }
 }
