--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "tetris-core",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "prepublishOnly": "npm run build",
     "dev": "webpack-dev-server --config example/webpack/devserver.js",
-    "build": "microbundle build -i src/index.js --compress false",
+    "build": "npm run build-cjs && npm run build-es",
+    "build-cjs": "bili --format cjs --filename index[suffix].js",
+    "build-es": "bili --format es --filename index[suffix].js --no-js",
     "test": "jest test --watch"
   },
   "repository": {
@@ -18,6 +20,15 @@
   "bugs": {
     "url": "https://github.com/goldenthumb/tetris-core/issues"
   },
+  "keywords": [
+    "tetris",
+    "tetris module",
+    "tetris core",
+    "hyperapp tetris"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-object-rest-spread": "^7.3.1",
@@ -26,6 +37,7 @@
     "autoprefixer": "^9.4.6",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.5",
+    "bili": "^3.4.2",
     "css-loader": "^2.1.0",
     "hyperapp": "^1.2.9",
     "jest": "^23.6.0",
