--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@babel/preset-env": "^7.3.1",
     "autoprefixer": "^9.4.6",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.5",
     "bili": "^3.4.2",
